--- a/app/views/game_templates/homepage.html.erb
+++ b/app/views/game_templates/homepage.html.erb
@@ -57,7 +57,7 @@
     <td>We tie</td>
   </tr>
 </tbody></table>
-
+<img src = "app/assets/images/Untitled design.png" alt = "test">
 <p> Originating from China and Japan, other names for the game in the English-speaking world include roshambo and other orderings of the three items, with "rock" sometimes being called "stone". </p>
 <div>
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/627px-Rock-paper-scissors.svg.png" alt = "Rock-Paper-Scissors"> 
